// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GapField snapshots > should render the horizontal gap icon 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="gap"
    >
      <div
        class="ScrubbableInput"
      >
        <div
          class="_InputAdornment_bfc2de"
        >
          <svg
            aria-hidden="true"
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="24"
            style="color: var(--color-neutral-2);"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M7.5 7A1.5 1.5 0 0 1 9 8.5v7A1.5 1.5 0 0 1 7.5 17a.5.5 0 0 1-.1-.99l.2-.02a.5.5 0 0 0 .4-.49v-7a.5.5 0 0 0-.4-.49l-.2-.02A.5.5 0 0 1 7.5 7m9 0a.5.5 0 0 1 .1.99l-.2.02a.5.5 0 0 0-.4.49v7a.5.5 0 0 0 .4.49l.2.02a.5.5 0 0 1-.1.99 1.5 1.5 0 0 1-1.5-1.5v-7A1.5 1.5 0 0 1 16.5 7M12 11a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
              data-svg-property="fill"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <input
        aria-label="Gap"
        class="_TextFieldWrapper__input_9a3a67"
        data-state="closed"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="gap"
        type="number"
        value="12"
      />
      <span
        class="_TextFieldWrapper__endAdornment_9a3a67"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Horizontal gap options"
          class="_ButtonMenu_7516ba"
          data-state="closed"
          type="button"
        >
          <svg
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="24"
            style="color: var(--color-neutral-1);"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M9.646 11.146a.5.5 0 0 1 .708 0L12 12.793l1.646-1.647a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 0-.708"
              data-svg-property="fill"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GapField snapshots > should render the literal "Auto" text as the input value when the mode is auto 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="gap"
    >
      <div
        class="ScrubbableInput"
      >
        <div
          class="_InputAdornment_bfc2de"
        >
          <svg
            aria-hidden="true"
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="24"
            style="color: var(--color-neutral-2);"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M7.5 7A1.5 1.5 0 0 1 9 8.5v7A1.5 1.5 0 0 1 7.5 17a.5.5 0 0 1-.1-.99l.2-.02a.5.5 0 0 0 .4-.49v-7a.5.5 0 0 0-.4-.49l-.2-.02A.5.5 0 0 1 7.5 7m9 0a.5.5 0 0 1 .1.99l-.2.02a.5.5 0 0 0-.4.49v7a.5.5 0 0 0 .4.49l.2.02a.5.5 0 0 1-.1.99 1.5 1.5 0 0 1-1.5-1.5v-7A1.5 1.5 0 0 1 16.5 7M12 11a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
              data-svg-property="fill"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <input
        aria-label="Gap"
        class="_TextFieldWrapper__input_9a3a67"
        data-state="closed"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="gap"
        type="text"
        value="Auto"
      />
      <span
        class="_TextFieldWrapper__endAdornment_9a3a67"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Horizontal gap options"
          class="_ButtonMenu_7516ba"
          data-state="closed"
          type="button"
        >
          <svg
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="24"
            style="color: var(--color-neutral-1);"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M9.646 11.146a.5.5 0 0 1 .708 0L12 12.793l1.646-1.647a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 0-.708"
              data-svg-property="fill"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GapField snapshots > should render the vertical gap icon 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="gap"
    >
      <div
        class="ScrubbableInput"
      >
        <div
          class="_InputAdornment_bfc2de"
        >
          <svg
            aria-hidden="true"
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="24"
            style="color: var(--color-neutral-2);"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M15.5 15a1.5 1.5 0 0 1 1.5 1.5.5.5 0 0 1-.99.1l-.02-.2a.5.5 0 0 0-.49-.4h-7a.5.5 0 0 0-.49.4l-.02.2a.5.5 0 0 1-.99-.1A1.5 1.5 0 0 1 8.5 15zM12 11a1 1 0 1 1 0 2 1 1 0 0 1 0-2m4.5-4a.5.5 0 0 1 .5.5A1.5 1.5 0 0 1 15.5 9h-7A1.5 1.5 0 0 1 7 7.5a.5.5 0 0 1 .99-.1l.02.2a.5.5 0 0 0 .49.4h7a.5.5 0 0 0 .49-.4l.02-.2a.5.5 0 0 1 .49-.4"
              data-svg-property="fill"
              fill="white"
            />
          </svg>
        </div>
      </div>
      <input
        aria-label="Gap"
        class="_TextFieldWrapper__input_9a3a67"
        data-state="closed"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="gap"
        type="number"
        value="12"
      />
      <span
        class="_TextFieldWrapper__endAdornment_9a3a67"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Vertical gap options"
          class="_ButtonMenu_7516ba"
          data-state="closed"
          type="button"
        >
          <svg
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="24"
            style="color: var(--color-neutral-1);"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M9.646 11.146a.5.5 0 0 1 .708 0L12 12.793l1.646-1.647a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 0-.708"
              data-svg-property="fill"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
